Attempting to get this to work

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>GBA Launcher: </title>
+        <title>GBA Launcher: BETA </title>
         <meta charset="UTF-8">
     </head>
     <body>
