--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@
         <h3>Sorry, but you're not supposed to be using this Index.</h3>
         <h4>Please use Dump Pages.</h4> 
     </body>
+    
+    <!-- footer --> 
+    <section id="footer">
+        <p>(C) Dr.Hacknik 2017 | Dump GBA Ver: 0.2</p> 
+    </section> 
 </html>
