--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <body>  
         <h3>Sorry, but you're not supposed to be using this Index.</h3>
         <h4>Please use Dump Pages.</h4> 
+        <h4>If you wish to use the offline launcher, <a href="offline_launcher"></a></h4>
+        <h4>Please use Dump Pages.</h4> 
     </body>
-    
+   
     <!-- footer --> 
     <section id="footer">
         <p>(C) Dr.Hacknik 2017 | Dump GBA Ver: 0.2</p> 
