--- a/offline_launcher.html
+++ b/offline_launcher.html
@@ -6,6 +6,7 @@
     </head>
     <body>
 					<h2>Select A Game:</h2>
+	    				<p><a href="https://zoltx23.github.io/dump_pages/index">Go back to Dump Pages</a></p>
 					<ul>
 					    <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
 					    <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
