--- a/index.html
+++ b/index.html
@@ -1,18 +1,44 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+   Solid State by HTML5 UP
+   html5up.net | @ajlkn
+   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+   -->
 <html>
-    <head>
-        <title>Dump GBA | Index</title>
-        <meta charset="UTF-8">
-    </head>
-    <body>  
-        <h3>Sorry, but you're not supposed to be using this Index.</h3>
-        <h4>Please use Dump Pages.</h4> 
-        <h4>If you wish to use the offline launcher, <a href="offline_launcher">Click here</a></h4>
-        <h4>Please use Dump Pages.</h4> 
-    </body>
-   
-    <!-- footer --> 
-    <section id="footer">
-        <p>(C) Dr.Hacknik 2017 | Dump GBA Ver: 0.2</p> 
-    </section> 
+   <head>
+      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+      <title>Dump Pages</title>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+      <link rel="stylesheet" href="assets/css/main.css" />
+      <!--[if lte IE 9]>
+      <link rel="stylesheet" href="assets/css/ie9.css" />
+      <![endif]-->
+      <!--[if lte IE 8]>
+      <link rel="stylesheet" href="assets/css/ie8.css" />
+      <![endif]-->
+   </head>
+   <body>
+      <!-- Page Wrapper -->
+      <div id="page-wrapper">
+         <section id="banner">
+            <header>
+               <div align="center" class="inner">
+                  <h2 align="center">Dump Pages - GBA Emulator</h2>
+                  <p align="center">Please use the Launcher, by clicking the button below.</p>
+				  </br>
+				  <a href="offline_launcher" class="button">Open Launcher</a>
+               </div>
+            </header>
+         </section>
+      </div>
+      <!-- Scripts -->
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrollex.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
+   </body>
 </html>
