--- a/offline_launcher.html
+++ b/offline_launcher.html
@@ -7,7 +7,7 @@
 <html>
    <head>
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-      <title>Dump Pages</title>
+      <title>Dump Pages | GBA</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
