--- a/offline_launcher.html
+++ b/offline_launcher.html
@@ -24,17 +24,10 @@
     <div id="page-wrapper">
         <section id="wrapper">
             <header>
-                <div class="inner">
+                <div align="center" class="inner">
 					<h2>Select A Game:</h2>
-					<p><a href="https://zoltx23.github.io/dump_pages">Go back to Dump Pages</a></p>
-                </div>
-            </header>
-         </section>
-	<div align="center" id="inner"> 
-         <section id="inner">
-            <header algin="center">
-				<body>
-					<ul>
+					<p><a href="https://zoltx23.github.io/dump_pages">Go back to Dump Pages</a></p
+					</br>
 					    <li align="center"><a href="./launcher.html#advancewars">Advance Wars</a></li>
 					    <li align="center"><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
 					    <li align="center"><a href="./launcher.html#aladdin">Aladdin</a></li>
