--- a/changelog/index.html
+++ b/changelog/index.html
@@ -7,7 +7,7 @@
 <html>
    <head>
       <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-      <title>Dump Pages</title>
+      <title>Dump Pages - GBA - Changelog</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -27,6 +27,7 @@
 				   <p><strong>Site Version: 0.3</strong><li>Fixed issue with Loading.</li><li>Refined the Site.</li></p>
 				   </br>
 				   <p><strong>Site Version: 0.2</strong><li>Fixed issue with loading the save files.</li><li>Refined the Site.</li></p>
+				   </br>
 				   <p><strong>Site Version: 0.1</strong><li>Initial commit.</p>
 				  <a href="../" class="button">Return to the Main Page</a>
                </div>
