--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
    <head>
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-      <title>Dump Pages</title>
+      <title>Dump Pages - GBA</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,6 +29,9 @@
                   <p align="center">Please use the Launcher, by clicking the button below.</p>
 				  </br>
 				  <a href="offline_launcher" class="button">Open Launcher</a>
+				  </br>
+				  </br>
+				  <a href="changelog" class="button">View site changelog</a>
                </div>
             </header>
          </section>
