--- a/changelog/index.html
+++ b/changelog/index.html
@@ -24,6 +24,8 @@
       <div id="banner">
                <div align="center" class="inner">
                   <h2 align="center">Dump Pages - GBA Emulator Changelog</h2>
+				   <p><strong>Site Version: 0.4</strong<li>Fixed and Refined the emulator launcher.</li></p>
+				   </br>
 				   <p><strong>Site Version: 0.3</strong><li>Fixed issue with Loading.</li><li>Refined the Site.</li></p>
 				   </br>
 				   <p><strong>Site Version: 0.2</strong><li>Fixed issue with loading the save files.</li><li>Refined the Site.</li></p>
