Added offline version

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 				  <a href="offline_launcher" class="button">Open Launcher</a>
 				  </br>
 				  </br>
+				  <a href="https://github.com/zoltx23/gba/archive/gh-pages.zip" class="button">Download Offline Version</a>
+				  </br>
+				  </br>
 				  <a href="changelog" class="button">View site changelog</a>
+				  
                </div>
             </header>
          </section>
